fixed: errors from SonarQube